# SeaturtleSoups

./: .gitignore  README.md
github2/workflows/: backend-deploy.yml  frontend-deploy copy.yml
openai_test/: Cargo.toml  prompt  story_data.txt  story_data2.txt  story_data_temp copy.txt  story_data_temp.txt
openai_test/src/: main.rs
terraform/: main.tf  outputs.tf  production.tfvars  variables.tf
terraform/database/: database.tf
terraform/ecs/: backend_service.tf  ecs_cluster.tf  frontend_service.tf  task_definitions.tf
terraform/secrets/: secrets_manager.tf
turtle-backend/: Cargo.toml  Dockerfile
turtle-backend/migrations/: 20241014073117_init_schema.sql  20241014074000_add_indexes.sql
turtle-backend/src/: config.rs  db.rs  lib.rs  main.rs  test.rs
turtle-backend/src/handlers/: auth_handler.rs  captcha_handler.rs  complaint_handler.rs  custom_story_handler.rs  health_handler.rs  mod.rs  openai_handler.rs  pending_story_handler.rs  rating_handler.rs  response_handler.rs  story_handler.rs  user_handler.rs
turtle-backend/src/models/: complaint.rs  custom_story.rs  mod.rs  pending_story.rs  response.rs  story.rs  user.rs
turtle-backend/src/routes/: auth_routes.rs  captcah_routes.rs  complaint_routes.rs  custom_story_routes.rs  health_routes.rs  mod.rs  openai_routes.rs  pending_story_routes.rs  rating_routes.rs  response_routes.rs  story_routes.rs  user_routes.rs
turtle-backend/src/services/: mod.rs  openai_service.rs  reponse_saver.rs  story_saver.rs
turtle-frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.js
(+128 files in other folders)
